# week1-chyrp

./: .gitignore  compose.yaml  package-lock.json  package.json  run.sh
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  openapi.json  pyproject.toml  reference.sql
backend/src/backend/: main.py
backend/src/backend/config/: database.py
backend/src/backend/controllers/: auth_controller.py  blog_controller.py  category_controller.py  comment_controller.py  like_controller.py  role_controller.py  site_controller.py  tag_controller.py  theme_controller.py  uploader_controller.py
backend/src/backend/models/: __init__.py  base.py  comment.py  engagement.py  post.py  session.py  site.py  system.py  taxonomy.py  user.py
backend/src/backend/services/: session_service.py  user_service.py
backend/tests/: create_fresh_data.py  create_sample_data.py  create_simple_data.py  test_core_functionality.py  test_main.py
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  orval.config.cjs  package-lock.json  package.json  update-endpoints.sh  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  generated.ts  types.ts
frontend/src/components/: Header.tsx  Layout.tsx  ManageRoles.tsx  ManageUsers.tsx  MarkdownEditorWrapper.tsx  NewUserForm.tsx  PostEdit.tsx  PostView.tsx  Sidebar.tsx
frontend/src/pages/: AdminNav.tsx  AdminPage.tsx  ExtendPage.tsx  ManagePage.tsx  PostDetail.tsx  SettingsPage.tsx  controls.tsx  create-post.tsx  home.tsx  homenew.tsx  login.tsx  post.tsx
(+1 files in other folders)
